--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ a {
 .Price {
     width: fit-content;
     margin: auto;
-    margin-top: 20px;
+    margin-bottom: 30px;
     font-size: 18px;
 }
 
